--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,7 +22,7 @@
   },
   "devDependencies": {
     "terser": "^5.31.0",
-    "vite": "6.0.9"
+    "vite": "^5.3.1"
   },
   "dependencies": {
     "node-fetch": "^3.3.2",
